--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name="cshwen.mechat.activity.RegisterActivity" />
+        <activity android:name="cshwen.mechat.activity.HomeActivity" />
     </application>
 
 </manifest>
